<resources>
    <string name="app_name">Note</string>
    <string name="all_notes">全部便簽</string>
    <string name="open">打開</string>
    <string name="close">關閉</string>
    <string name="settings">設置</string>
    <string name="switch_layout">切換佈局</string>
    <string name="about">關於軟件</string>
    <string name="support_developer">支持開發者</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="create">创建</string>
    <string name="creat_failed">创建失败</string>
    <string name="create_successfully">创建成功</string>
    <string name="rename_succeed">重命名成功</string>
    <string name="rename_failed">重命名失败</string>
    <string name="fragment_main">fragment_main</string>
    <string name="fragment_drawer">fragment_drawer</string>
    <string name="please_input_name">请输入名称</string>
    <string name="create___">新建...</string>
    <string name="ok">确定</string>
    <string name="rename">重命名</string>
    <string name="delete">刪除</string>
    <string name="delete_failed">刪除失敗</string>
    <string name="delete_succeed">刪除成功</string>
    <string name="back">back</string>
    <string name="forward">前進</string>
    <string name="save">保存</string>
    <string name="edit_succeed">更新成功</string>
    <string name="edit_failed">更新失敗</string>
    <string name="search_key">搜索關鍵字</string>
</resources>
